---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S101 Use of `assert` detected
 --> S101.py:1:1
  |
1 | assert True  # S101
  | ^^^^^^
  |

S101 Use of `assert` detected
 --> S101.py:6:5
  |
6 |     assert x == 1  # S101
  |     ^^^^^^
  |

S101 Use of `assert` detected
 --> S101.py:7:5
  |
7 |     assert x == 2  # S101
  |     ^^^^^^
  |
